# live-vlm-webui-deepstream

./: .gitignore  README.md  docker-compose.yaml
deepstream/: CMakeLists.txt  deepstream_test_app.c  dstest3_config.yml  dstest3_pgie_config.txt  dstest3_pgie_config.yml
deepstream/plugins/gst-dsexample/: CMakeLists.txt  gstdsexample.cpp  gstdsexample.h
deepstream/plugins/gst-dsexample/dsexample_lib/: CMakeLists.txt  redis_client.h  threadsafe_queue.h
rtspserver/: run.md
server/: Dockerfile  api.py  models.py  requirements-fastapi.txt  websocket_manager.py
ui/: index.html
vlm/: vlm_backend_setup.md
